added photos, content, adjusted css, fixed backward linking

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -27,26 +27,28 @@
 	</header>
 
 <div class="container">
-<h2>we organize homecoming. semiformal. pep rallies.</h2>
-<h3>but that's it, right?</h3>
-<h2>well, think again.</h2>
-<h3>student council brings the delectful snacks to the cafeteria twice a month.</h3>
-<h3>student council runs the annual #beathungerbeathorseheads event.</h3>
-<h3>student council supports class councils in person and via social media.</h3>
-<h2>student council — now more than ever — unifies the student body amidst physical separation.</h2>
-<h1>student council has always been the glue that bonds everyone in our school together.</h1>
-<h1>and it always will be.</h1>
+	<h2>we organize homecoming. semiformal. pep rallies.</h2>
+	<h3>but that's it, right?</h3>
+	<h2>well, think again.</h2>
+	<hr></hr>
+	<h3>student council brings the delectful snacks to the cafeteria twice a month.</h3>
+	<h3>student council runs the annual #beathungerbeathorseheads event.</h3>
+	<h3>student council supports class councils in person and via social media.</h3>
+	<h2>student council — now more than ever — unifies the student body amidst physical separation.</h2>
+	<h1>student council has always been the glue that bonds everyone in our school together.</h1>
+	<h1>and it always will be.</h1>
 </div>
 
-<div class="container">
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/aboutus.html">about us</a></li>
 		</ol>
 	</nav>
-</body>
 </div>
 
+</body>
 
 </html>
+
