--- a/html/formdata.html
+++ b/html/formdata.html
@@ -13,28 +13,28 @@
 
 <body>
 <header class="container">
-		<div class="row">
-			<h1 class="col-sm-4">#hawknation</h1>
-			<nav class="col-sm-8 text-center">
-				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
-			</nav>
+	<div class="row">
+		<h1 class="col-sm-4">#hawknation</h1>
+		<nav class="col-sm-8 text-center">
+		<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
+		<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
+		<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
+		<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
+		<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
+		<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+		</nav>
 		</div>
 	</header>
 	
 <div class="container">
 	<h1>thank you for your submission! we will email you shortly with next steps!</h1>
-	<a class="btn btn-primary" href="/html/aboutus.html" role="button">back to main page</a>
+	<a class="btn btn-primary" href="../index.html" role="button">back to main page</a>
 </div>
 
-<div class="container">
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/formdata.html">confirmation</a></li>
 		</ol>
 	</nav>
