--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -84,10 +84,10 @@
 	<li>Sofia Sterbenk</li>
 	<li>Erin Thomas</li>
 	<li>Brooke Yorio</li>
-<div class="container">
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
 		</ol>
 	</nav>
