--- a/html/photos.html
+++ b/html/photos.html
@@ -26,16 +26,28 @@
 		</div>
 	</header>
 <div class="container">
-<img src="/images/hawk.png">
-<img src="/images/jennaandabbey.png">
-<img src="/images/oldmeeting.png">
-<img src="/images/winterfestival.png">
-<img src="/images/memorywalk.png">
+<img src="/images/2021winterfest.png" width=350 height=350>
+<img src="/images/2020memorywalk.png" width=350 height=350>
+<img src="/images/2019springfest.png" width=350 height=350>
+<img src="/images/2019fooddrive.png" width=350 height=350>
+<img src="/images/2019fallpepja.png" width=350 height=350>
+<img src="/images/2019fallpephawk.png" width=350 height=350>
+<img src="/images/2018fallfest2.png" width=350 height=350>
+<img src="/images/2018fallfest1.png" width=350 height=350>
+<img src="/images/2018meeting.png" width=350 height=350>
+<img src="/images/2017springfest.png" width=350 height=350>
+<img src="/images/2017juniorfundraiser.png" width=350 height=350>
+<img src="/images/2015facultymeeting.png" width=350 height=350>
+<img src="/images/2014winterfest.png" width=350 height=350>
+<img src="/images/2014fallpep.png" width=350 height=350>
+<img src="/images/2014activitiesfair.png" width=350 height=350>
+<img src="/images/2014fallfest.png" width=350 height=350>
+<img src="/images/2014fallopenhouse.png" width=350 height=350>
 </div>
-<div class="container">
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/photos.html">photos</a></li>
 		</ol>
 	</nav>
