--- a/html/spiritwear.html
+++ b/html/spiritwear.html
@@ -25,10 +25,10 @@
 			</nav>
 		</div>
 	</header>
-<div class="container">
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/spiritwear.html">spiritwear</a></li>
 		</ol>
 	</nav>
