--- a/html/upcomingevents.html
+++ b/html/upcomingevents.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
+	<script src="/html/script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -25,10 +26,11 @@
 			</nav>
 		</div>
 	</header>
-<div class="container">
+
+<div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a href="/html/index.html">landing</a></li>
+			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
 			<li class="breadcrumb-item"><a href="/html/upcomingevents.html">upcoming events</a></li>
 		</ol>
 	</nav>
