--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/html/style.css">
 </head>
 
@@ -28,14 +29,12 @@
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row text-center">
-				<h2>welcome to the cpphs student council</h2>
+				<h2>welcome to corning-painted post high school's student council</h2>
 				<h3>&#9733 where students are the center of all we do &#9733</h3>
 				<a class="btn btn-primary" href="/html/aboutus.html" role="button">about us</a>
 			</div>
 		</div>
 	</section>
-
-
 </body>
 
 </html>
