--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -3,25 +3,48 @@
 
 <head>
 	<title>about us</title>
-	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
+	<link rel="shortcut icon" type="image/jpg" href="../images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="../script.js"></script>
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
+<div class="topnav" id="searchbar">
+<div class="search-container">
+	<form action="search.php" id="searching">
+		<input type="text" placeholder="search website" name="search" id="query">
+		<button type="submit" class="button" id="searchbutton">go</button>
+		</form>
+</div>
+	<script>
+		const f = document.getElementById('searching');
+		const q = document.getElementById('query');
+		const google = 'https://www.google.com/search?q=site%3A+';
+		const site = 'https://cpphsstudentcouncil.rg663.repl.co/';
+		function submitted(event) {
+			event.preventDefault();
+			const url = google + site + '+' + q.value;
+			const win = window.open(url, '_blank');
+			win.focus();
+		}
+		f.addEventListener('submit', submitted);
+</script>
+</div>
+		
 <body>
 	<header class="container">
 		<div class="row">
-			<h1 class="col-sm-4">#hawknation</h1>
+			<p class="col-sm-4"><a class="nav-link" href="../index.html" id="backhome">back to #hawknation</a></p>
 			<nav class="col-sm-8 text-center">
-				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="aboutus.html"> about us &#9734</a></p>
 			</nav>
 		</div>
 	</header>
@@ -33,18 +56,53 @@
 	<hr></hr>
 	<h3>student council brings snacks to the cafeteria every two months.</h3>
 	<h3>student council runs the annual #beathungerbeathorseheads event.</h3>
-	<h3>student council supports class councils in person and via social media.</h3>
+	<h3>student council supports class councils in-person and via social media.</h3>
 	<h2>student council — now more than ever — unifies the student body amidst physical separation.</h2>
 	<h1>student council has always been the glue that bonds our school together.</h1>
 	<h1>and it always will be.</h1>
+	<h1 id="heading-3">because we are #hawknation.</h1>
 </div>
+
+	<section class="container">
+		<button class="openChatBtn" onclick="openForm()">💬 chat</button>
+		<div class="openChat">
+		<form method="POST" action="../action_page.php">
+		<h1>get in touch!</h1>
+		<label for="msg"><b>message</b></label>
+		<textarea placeholder="type message here ..." name="msg" required></textarea>
+		<label for="email"><b>personal email</b></label>
+		<br>
+		<input type="email" name="email-address" id="email-address" required>
+		<br>
+		<label for="school-address"><b>school email</b></label>
+		<br>
+		<input type="email" name="school-address" id="school-address">
+		<br>
+		<button type="submit" class="btn">send</button>
+		<button type="button" class="closeChatBtn" onclick="closeForm()">
+		cancel
+		</button>
+		</form>
+		</div>
+		<script>
+			document.querySelector(".openChatBtn") .addEventListener("click", openForm);
+			document.querySelector(".closeChatBtn").addEventListener("click", closeForm);
+			function openForm() {
+					document.querySelector(".openChat").style.display = "block";
+			}
+			function closeForm() {
+					document.querySelector(".openChat").style.display = "none";
+			}
+		</script>
+	</div>
+	</section>
 
 <br>
 <div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
-			<li class="breadcrumb-item"><a href="/html/aboutus.html">about us</a></li>
+			<li class="breadcrumb-item"><a href="aboutus.html">about us</a></li>
 		</ol>
 	</nav>
 </div>
