--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -3,53 +3,80 @@
 
 <head>
 	<title>our team</title>
-	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
+	<link rel="shortcut icon" type="image/jpg" href="../images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="../script.js">
+	</script>
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
+<div class="topnav" id="searchbar">
+<div class="search-container">
+	<form action="search.php" id="searching">
+		<input type="text" placeholder="search website" name="search" id="query">
+		<button type="submit" class="button" id="searchbutton">go</button>
+		</form>
+</div>
+	<script>
+		const f = document.getElementById('searching');
+		const q = document.getElementById('query');
+		const google = 'https://www.google.com/search?q=site%3A+';
+		const site = 'https://cpphsstudentcouncil.rg663.repl.co/';
+		function submitted(event) {
+			event.preventDefault();
+			const url = google + site + '+' + q.value;
+			const win = window.open(url, '_blank');
+			win.focus();
+		}
+		f.addEventListener('submit', submitted);
+</script>
+</div>
+		
 <body>
-		<header class="container">
+	<header class="container">
 		<div class="row">
-			<h1 class="col-sm-4">#hawknation</h1>
+			<p class="col-sm-4"><a class="nav-link" href="../index.html" id="backhome">back to #hawknation</a></p>
 			<nav class="col-sm-8 text-center">
-				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="aboutus.html"> about us &#9734</a></p>
 			</nav>
 		</div>
 	</header>
 
-	<div class="container">
-		<h2>our advisors</h2>
-		<img src="/images/profile1.png" width=100 height=100>
+	<br>
+	<div class="container" id="advisors">
+		<h2 id="heading-3">our advisors</h2>
+		<img src="../images/profile1.png" width=100 height=100>
 		<p>Mrs. Stephanie Hillman (English Teacher)</p>
-		<img src="/images/profile1.png" width=100 height=100>
+		<img src="../images/profile1.png" width=100 height=100>
 		<p>Mrs. Julie Pusateri (Freshman Guidance)</p>
-		<img src="/images/profile1.png" width=100 height=100>
-		<p>Mrs. Mandy Freeman (Freshman Guidance)</p>
+		<img src="../images/profile1.png" width=100 height=100>
+		<p>Mrs. Mandy Freeman (Freshman Guidance)</p>	
+		<hr>
 	</div> 
 	
-	<div class="container">
-		<h2>'20-'21 officers</h2>
-		<img src="/images/profile1.png" width=100 height=100>
+	<div class="container" id="officers">
+		<h2 id="heading-3">'20-'21 officers</h2>
+		<img src="../images/kelibitmoji.png" width=100 height=100>
 		<p>President: Keli Smith, 12</p>
-		<img src="/images/profile1.png" width=100 height=100>
+		<img src="../images/prestonbitmojii.png" width=90 height=90>
 		<p>Vice President: Preston Ogunwumi, 10</p>
-		<img src="/images/profile1.png" width=100 height=100>
+		<img src="../images/kiarabitmoji.png" width=100 height=100>
 		<p>Treasurer: Kiara Ball, 11</p>
-		<img src="/images/profile1.png" width=100 height=100>
+		<img src="../images/riabitmoji.png" width=100 height=100>
 		<p>Secretary: Ria Gupta, 12</p>
+		<hr>
 	</div> 
 
-	<div class="container">
-		<h2>all members</h2>
+	<div class="container" id="members">
+		<h2 id="heading-3">all members</h2>
 		<li>Surav Amin</li>
 		<li>Berlyn Arnold</li>
 		<li>Ashton Bange</li>
@@ -87,12 +114,46 @@
 		<li>Brooke Yorio</li>
 	</div>
 
+	<section class="container">
+		<button class="openChatBtn" onclick="openForm()">💬 chat</button>
+		<div class="openChat">
+		<form method="POST" action="../action_page.php">
+		<h1>get in touch!</h1>
+		<label for="msg"><b>message</b></label>
+		<textarea placeholder="type message here ..." name="msg" required></textarea>
+		<label for="email"><b>personal email</b></label>
+		<br>
+		<input type="email" name="email-address" id="email-address" required>
+		<br>
+		<label for="school-address"><b>school email</b></label>
+		<br>
+		<input type="email" name="school-address" id="school-address">
+		<br>
+		<button type="submit" class="btn">send</button>
+		<button type="button" class="closeChatBtn" onclick="closeForm()">
+		cancel
+		</button>
+		</form>
+		</div>
+		<script>
+			document.querySelector(".openChatBtn") .addEventListener("click", openForm);
+			document.querySelector(".closeChatBtn").addEventListener("click", closeForm);
+			function openForm() {
+					document.querySelector(".openChat").style.display = "block";
+			}
+			function closeForm() {
+					document.querySelector(".openChat").style.display = "none";
+			}
+		</script>
+	</div>
+	</section>
+
 <br>
 <div class="container" id="bread">
 	<nav aria-label="breadcrumb">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="../index.html">home</a></li>
-			<li class="breadcrumb-item"><a href="/html/ourteam.html">our team</a></li>
+			<li class="breadcrumb-item"><a href="ourteam.html">our team</a></li>
 		</ol>
 	</nav>
 </div>
