--- a/html/upcomingevents.html
+++ b/html/upcomingevents.html
@@ -3,36 +3,109 @@
 
 <head>
 	<title>upcoming events</title>
-	<link rel="shortcut icon" type="image/jpg" href="/images/favicon.png">
+	<link rel="shortcut icon" type="image/jpg" href="../images/favicon.png">
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
 	 crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel="stylesheet" type="text/css">
-	<script src="/html/script.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="../script.js"></script>
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
+<div class="topnav" id="searchbar">
+<div class="search-container">
+	<form action="search.php" id="searching">
+		<input type="text" placeholder="search website" name="search" id="query">
+		<button type="submit" class="button" id="searchbutton">go</button>
+		</form>
+</div>
+	<script>
+		const f = document.getElementById('searching');
+		const q = document.getElementById('query');
+		const google = 'https://www.google.com/search?q=site%3A+';
+		const site = 'https://cpphsstudentcouncil.rg663.repl.co/';
+		function submitted(event) {
+			event.preventDefault();
+			const url = google + site + '+' + q.value;
+			const win = window.open(url, '_blank');
+			win.focus();
+		}
+		f.addEventListener('submit', submitted);
+</script>
+</div>
+		
 <body>
 	<header class="container">
 		<div class="row">
-			<h1 class="col-sm-4">#hawknation</h1>
+			<p class="col-sm-4"><a class="nav-link" href="../index.html" id="backhome">back to #hawknation</a></p>
 			<nav class="col-sm-8 text-center">
-				<p class="nav-item"> <a class="nav-link" href="/html/upcomingevents.html"> upcoming events &#9734 </a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/photos.html"> photos &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/spiritwear.html"> spiritwear &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/ourteam.html"> our team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/jointheteam.html"> join the team &#9734</a></p>
-				<p class="nav-item"> <a class="nav-link" href="/html/aboutus.html"> about us &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="upcomingevents.html"> upcoming events &#9734 </a></p>
+				<p class="nav-item"> <a class="nav-link" href="photos.html"> photos &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="spiritwear.html"> spiritwear &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="ourteam.html"> our team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="jointheteam.html"> join the team &#9734</a></p>
+				<p class="nav-item"> <a class="nav-link" href="aboutus.html"> about us &#9734</a></p>
 			</nav>
 		</div>
 	</header>
+
+	<div class="container">
+		<h2 id="heading-3"> check the calendar below for upcoming and past events!</h2>
+		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=Y3BwaHNzdHVkZW50Y291bmNpbEBnbWFpbC5jb20&amp;src=djNvYTlvbWs2aWRmbTVvOXNvOWVwMjc1bWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;color=%233F51B5" style="border-width:0" width="1140" height="600" frameborder="0" scrolling="no"></iframe>
+		<h3 id="orange">events in orange are school-wide events.</h3>
+		<h3 id="blue">events in blue are meetings.</h3>
+		<hr>
+		<h4>not in student council but want to join a meeting? join the google classroom here for the meeting link!</h4>
+		<a href="https://classroom.google.com/c/MTQ4MjU3NTI1MjYw?cjc=eadqvyw">
+			<img src="../images/classroom.png" width=250 height=250>
+		</a>
+	</div>
+
+	<div class="container">
+		<h2 id="heading-3">meeting notes</h2>
+			<iframe width=100% height=400 src="https://docs.google.com/document/d/e/2PACX-1vR7fgRdIjCGcdXLC2vaD87NjK4OA-PiWJRgYneKLaEt67LG0B35yHN34sSBo6C8xJzcXFOh2nOJsEry/pub?embedded=true"></iframe>
+	</div>
+
+	<section class="container">
+		<button class="openChatBtn" onclick="openForm()">💬 chat</button>
+		<div class="openChat">
+		<form method="POST" action="../action_page.php">
+		<h1>get in touch!</h1>
+		<label for="msg"><b>message</b></label>
+		<textarea placeholder="type message here ..." name="msg" required></textarea>
+		<label for="email"><b>personal email</b></label>
+		<br>
+		<input type="email" name="email-address" id="email-address" required>
+		<br>
+		<label for="school-address"><b>school email</b></label>
+		<br>
+		<input type="email" name="school-address" id="school-address">
+		<br>
+		<button type="submit" class="btn">send</button>
+		<button type="button" class="closeChatBtn" onclick="closeForm()">
+		cancel
+		</button>
+		</form>
+		</div>
+		<script>
+			document.querySelector(".openChatBtn") .addEventListener("click", openForm);
+			document.querySelector(".closeChatBtn").addEventListener("click", closeForm);
+			function openForm() {
+					document.querySelector(".openChat").style.display = "block";
+			}
+			function closeForm() {
+					document.querySelector(".openChat").style.display = "none";
+			}
+		</script>
+	</div>
+	</section>
 
 	<br>
 	<div class="container" id="bread">
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="../index.html">home</a></li>
-				<li class="breadcrumb-item"><a href="/html/upcomingevents.html">upcoming events</a></li>
+				<li class="breadcrumb-item"><a href="upcomingevents.html">upcoming events</a></li>
 			</ol>
 		</nav>
 </div>
